<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/zen_toolbar" />

    <include layout="@layout/zen_progress" />

    <android.support.v7.widget.CardView
        style="@style/ZenPetsCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTime"
                    style="@style/CondensedRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/app_det_time"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="13sp" />

                <View
                    android:layout_width="0.50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/fixed_divider_horizontal_bright" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtUserName"
                        style="@style/CondensedRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2.5dp"
                        android:gravity="start|center"
                        android:text="@string/app_det_user_name"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:padding="11dp"
                            app:iiv_color="@color/tertiary_text"
                            app:iiv_icon="fou_clipboard_notes"
                            app:iiv_size="16dp" />

                        <TextView
                            android:id="@+id/txtVisitReason"
                            style="@style/NormalRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="11dp"
                            android:paddingRight="11dp"
                            android:paddingBottom="5dp"
                            android:text="@string/app_det_visit_reason"
                            android:textColor="@color/secondary_text"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:padding="11dp"
                            app:iiv_color="@color/tertiary_text"
                            app:iiv_icon="fou_paw"
                            app:iiv_size="16dp" />

                        <TextView
                            android:id="@+id/txtPetDetails"
                            style="@style/NormalRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="11dp"
                            android:paddingRight="11dp"
                            android:paddingBottom="5dp"
                            android:text="@string/app_det_pet_details"
                            android:textColor="@color/secondary_text"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/fixed_divider_horizontal_bright" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="end|center"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:adjustViewBounds="true"
                    app:iiv_color="@color/accent"
                    app:iiv_icon="gmd_info"
                    app:iiv_size="12dp" />

                <TextView
                    android:id="@+id/txtAppointmentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/app_det_app_status_label"
                    android:textColor="@color/secondary_text"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfirm"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/confirm_button_bg"
                    android:text="@string/app_det_confirm"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/cancel_button_bg"
                    android:text="@string/app_det_cancel"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>