<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/ZenPetsCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/imgvwUserProfile"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    app:placeholderImage="@drawable/ic_person_black_18dp"
                    app:roundedCornerRadius="5dp"
                    app:roundingBorderColor="@color/semiTransparentLight"
                    app:roundingBorderWidth="2dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtUserName"
                        style="@style/NormalBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/reviews_item_user_name"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtTimeStamp"
                        style="@style/LightNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/reviews_item_user_time_stamp"
                        android:textColor="@color/secondary_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/imgvwLikeStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    app:iiv_color="@android:color/holo_blue_dark"
                    app:iiv_icon="faw_thumbs_up"
                    app:iiv_size="15dp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtVisitExperience"
                style="@style/NormalRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/reviews_item_user_experience"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtVisitReason"
                style="@style/NormalRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/reviews_item_user_reason"
                android:textColor="@color/secondary_text"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout><!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/ZenPetsCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtNameStart"
                    style="@style/CondensedBold"
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/photo_frame_background"
                    android:gravity="center"
                    android:text="A"
                    android:textColor="@color/primary"
                    android:textSize="38sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtUserName"
                        style="@style/NormalRegular"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:paddingEnd="11dp"
                        android:paddingLeft="11dp"
                        android:paddingRight="11dp"
                        android:paddingStart="11dp"
                        android:paddingTop="2dp"
                        android:text="USER NAME"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtTimeStamp"
                        style="@style/LightBold"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:paddingBottom="2dp"
                        android:paddingEnd="11dp"
                        android:paddingLeft="11dp"
                        android:paddingRight="11dp"
                        android:paddingStart="11dp"
                        android:text="6 months ago"
                        android:textColor="@color/primary"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/imgvwLikeStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    app:iiv_color="@android:color/holo_blue_dark"
                    app:iiv_icon="faw_thumbs_up"
                    app:iiv_size="15dp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtVisitExperience"
                style="@style/CondensedBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingBottom="6dp"
                android:paddingEnd="11dp"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:paddingStart="11dp"
                android:paddingTop="6dp"
                android:text="EXPERIENCE"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/fixed_divider_horizontal_bright" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtVisitReason"
                style="@style/LightBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:paddingBottom="6dp"
                android:paddingEnd="11dp"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:paddingStart="11dp"
                android:paddingTop="6dp"
                android:text="Visit Reason"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>-->
